# explainable-facial-recognition

./: .gitignore  11-ppl-decision_tree_model.pkl  README  README.md
@events/: index.ts
colab/: eda.py
documentation/: Real-Time Facial Recognition System with Web Client and Explainable Backend.docx
face-detector/: .keep  CMakeLists.txt  README  detector.cpp  detector.h  hogdetector.cpp  hogdetector.h  main.cpp  train_hog_svm.cpp
recogniser/: .gitignore  decision_tree_model.pkl  label_encoder.pkl  labels (1).pkl  labels.pkl  requirements.txt  temp.txt
recogniser/source/: .filecreator.py  .gitignore  EDA.py  ForestModel.py  Model.py  XGBoostModel.py  dataset_summary.py  face_landmarks.py  feature_creator.py  feature_creator_multithreaded.py  feature_extractor.py  feature_extractor_multithreaded.py  haar_detector.py  main-xgboost.py  main.py  only_train.py  predict.py  test.py  test1.py  train.py  train_xgboost.py  utilities.py
recogniser/src/: haar_detector.py  server.py
recogniser/src/setup/: decisiontree.py  randomforest.py  xgboost.py
recogniser/src/training/: DecisionTree.txt  RandomForest.txt  XGBoost.txt  decisiontree.py  randomforest.py  xgboost.py
recogniser/src/utils/: find-maxdepth.py  misc.py  process_input.py
recogniser/testing/: decision-tree-output.txt
web/: .gitignore  bun.lockb  package.json
web/public/workers/: opencv-worker.js
web/src/components/: Feed.astro  Image.astro  Menu.astro  Menu.tsx
web/src/layouts/: Layout.astro
web/src/lib/: haar-cascades.ts  image.ts  web-socket.ts
web/src/pages/: index.astro  upload.astro
(+3 files in other folders)
